--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,11 +1,43 @@
 /* Mediaquery for tablet */
 
 @media screen and (min-width:768px) {
+
+    
+
     
 }
 
 /* Mediaquery for desktop */
 
 @media screen and (min-width:992px) {
-    
+
+    /* HEADER */
+
+    .container {
+        width: 70%;
+        display: flex;
+    }
+
+    #hidden-nav-bar {
+        display: block;
+        width: 65%;
+    }
+
+    #nav-bar {
+        width: 35%;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    #hidden-nav-bar ul {
+        height: 70px;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        list-style-type: none;
+        gap: 1rem;
+    }
+
 }
