--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,55 @@
         text-align: center;
     }
 
+    /* Partners section */
+
+    #partners {
+        text-align: center;
+        line-height: 2rem;
+        font-weight: bold;
+    }
+
+    #partners .container {
+        padding: 3rem 0;
+    }
+
+    #partners .card {
+        background-color: var(--background-violet);
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #partners h2 {
+        margin: 2rem 0;
+        color: var(--background-violet);
+        font-size: 1.5rem;
+    }
+
+    .partner-img {
+        min-width: 200px;
+        min-height: 200px;
+        border-radius: 50%;
+        background-position: center;
+        background-size: cover;
+        margin-bottom: 1.5rem;
+    }
+
+    #partners h6 {
+        font-size: 1.3rem;
+        margin-top: 1.5rem;
+    }
+
+    #partners .card:nth-child(2) .partner-img {
+        background-image: url(../img/testimonial1.jpg);
+    }
+
+    #partners .card:nth-child(3) .partner-img {
+        background-image: url(../img/testimonial2.jpg);
+    }
+
+    #partners .card:nth-child(4) .partner-img {
+        background-image: url(../img/testimonial3.jpg);
+    }
+
