--- a/css/responsive.css
+++ b/css/responsive.css
@@ -173,5 +173,12 @@
         display: block;
     }
 
+    /* CTA Section */
+
+    #cta .container {
+        display: block;
+        font-size: 1.5rem;
+    }
+
 
 }
